--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <body class="bg">
     <header>
         <div id="navloader" class="navloader pa t0 w100 bcwhite02 d0"><div id="navprogress" class="bcwhite04"></div></div>
-        <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
+        <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb pr2" selective="true">
             <a class="fr bcred p1" href="contribute/" globalize="contribute"><i class="icon yellow">&#9829;</i>Contribute</a>
-            <a class="pr2" href="contact/" globalize="contact">Contact</a>
-            <!--<a class="pr2" href="press/">Press</a>-->
-            <a class="pr2" href="faq/" globalize="faq">FAQ</a>
-            <a class="pr2" href="about/" globalize="about">About</a>
+            <a href="contact/" globalize="contact">Contact</a>
+            <!--<a href="press/">Press</a>-->
+            <a href="faq/" globalize="faq">FAQ</a>
+            <a href="about/" globalize="about">About</a>
         </nav>
     </header>
 
