--- a/faq/index.html
+++ b/faq/index.html
@@ -11,7 +11,7 @@
     <h1 globalize="faq">Frequently Asked Questions</h1>
 </div>
 
-<article class="pauto">
+<article class="pauto xs_p0 xm_p0 sm_p0 md_p0 lg_p0">
     <section>
         <nav class="tabs accordions" json="true" iterate="faq" datasource="assets/json/faq.json">
             <input type="radio" name="panel" id="tab{{ jsonget:id }}">
