--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -24,7 +24,7 @@
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
     <hr class="bos8 bcred mt2 mb2">
-    <article json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
+    <article json="true;loader" iterate="false" datasource="https://cehhbnpbfqgkyyggvkic.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNlaGhibnBiZnFna3l5Z2d2a2ljIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjI0Nzk4ODUsImV4cCI6MTk3ODA1NTg4NX0.GSpPsOgT3fPqapeBW1EdVLqRgHk-mxYJAfdA6hsGbZ0">
         <h2 globalize="language" class="mb1">Language</h2>
         <b class="mb1" globalize="modern_aramaic">Modern Aramaic</b>
         <h7 globalize="registered_words_suryoyo">Registered words in Suryoyo:</h7>
