--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
         <h4 globalize="page_contact_text1">For all inquiries, please email us using the form below.</h4>
     </section>
     <section>
-        <form method="post" datasource="https://tmqmoxcasyhxxxqknevp.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyNTM0NjM2MSwiZXhwIjoxOTQwOTIyMzYxfQ.3PDCNsUHb4gVwtRi_GTDA93sk3l9Usmd6YdA2OHxbY0" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
+        <form method="post" datasource="https://kxbdavyawgmhowkjaqtj.supabase.co/rest/v1/emails" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt4YmRhdnlhd2dtaG93a2phcXRqIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NjI1NDg1OTgsImV4cCI6MTk3ODEyNDU5OH0.fktNrLOpFwt4qFhbTeSvRRJqgsfs8K0nY2iaJBzvU6c" class="gaph2- mt2" ondone="alert('Your message was sent successfully.')">
                 <div class="group">
                     <input name="name" class="outlined phdark" type="text" globalize="full_name" placeholder="Full name" required>
                 </div>
