--- a/about/index.html
+++ b/about/index.html
@@ -22,8 +22,8 @@
         <p>The Aramean Institute's standard work approaches are:</p>
         <ul class="list">
             <li>Correcting misleading, unlogic, or false knowledge about the Arameans.</li>
-            <li>Providing free, reliable-trusted information and data about the Arameans.</li>
-            <li>Developing free software related to the Arameans.</li>
+            <li>Providing reliable-trusted information and data about the Arameans.</li>
+            <li>Developing software related to the Arameans.</li>
             <li>Increasing the awareness of Arameans to the outside world.</li>
             <li>Guiding and supporting projects related to the Arameans.</li>
             <li>Translating Aramaic to and from any other world language.</li>
@@ -51,7 +51,7 @@
     <section class="mt2">
         <h2 globalize="contribution">Contribution</h2>
         <h4 globalize="information" class="mt1">Information</h4>
-        <p>The Aramean Institute presents information gathered from knowledgeable Syriacs and Aramaics.</p>
+        <p>The Aramean Institute publishes information gathered from knowledgeable Syriacists and Arameanists.</p>
         <h4 globalize="software_code" class="mt1">Software code</h4>
         <p>The Aramean Institute is built on Open Source where anyone can contribute code to our sofware development team.</p>
         <h4 globalize="financing" class="mt1">Financing</h4>
