--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
     </section>
     <section class="mt2">
         <h2 globalize="vision">Vision</h2>
-        <p>Our vision is to populate, protect, preserve the continuous ancient Aramean heritage and aim to unite all Syrian (Syriac) people under the Aramean name through education and scientific knowledge.</p>
+        <p>Our vision is to preserve, protect, and promote the timeless Aramean heritage, fostering unity among Native Syrian (Syriac) people through the power of education and scientific knowledge under the Aramean umbrella.</p>
     </section>
     <section class="mt2">
         <h2 globalize="history">History</h2>
@@ -50,13 +50,13 @@
     </section>
     <section class="mt2">
         <h2 globalize="contribution">Contribution</h2>
+        <p>The Aramean Institute thrives on the collective contributions of its community.</p>
         <h4 globalize="information" class="mt1">Information</h4>
-        <p>The Aramean Institute publishes information gathered from knowledgeable Syriacists and Arameanists.</p>
+        <p>We collect and publish valuable insights and knowledge contributed by experienced Syriacists and Arameanists.</p>
         <h4 globalize="software_code" class="mt1">Software code</h4>
-        <p>The Aramean Institute is built on Open Source where anyone can contribute code to our sofware development team.</p>
+        <p>Our institute is built on an Open Source foundation, where individuals from all walks of life can contribute code to enhance our software development capabilities.</p>
         <h4 globalize="financing" class="mt1">Financing</h4>
-        <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
-        <p>We rely on the generous financial support of individuals and organizations to keep the Aramean Institute running.</p>
+        <p>As a nonprofit organization, we ensure that every contribution goes directly into sustaining our mission. We rely on the generous financial support of individuals and organizations, whose contributions keep the Aramean Institute running and thriving.</p>
     </section>
 </article>
 
