--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
     </section>
     <section class="mt2">
         <h2 globalize="mission">Mission</h2>
-        <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and share our expertise about or related to the Aramean people.</p>
+        <p>Our mission is to connect and build long-term relationships with companies, organizations, and individuals from all nations. We aim to provide reliable and trusted knowledge and data, share our expertise about the Aramean people, and offer valuable services. While some of our offerings are complimentary, our primary goal is to foster understanding and collaboration.</p>
         <br>
         <p>The Aramean Institute's standard work approaches are:</p>
         <ul class="list">
