--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -43,7 +43,7 @@
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
     </article>
     <hr class="bos8 bcred mt2 mb2">
-    <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/buildings" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
+    <article json="true;loader" iterate="false" datasource="https://snoulbshaqjnlgwfevpz.supabase.co/rest/v1/rpc/buildings" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTA0Mzc4NywiZXhwIjoxOTM2NjE5Nzg3fQ.vok7K5RJkQTP25mLjJ09co5neL4wxt5O1oIdd9E9m40">
         <h2 globalize="properties" class="mb1">Properties</h2>
         <b class="mb1" globalize="buildings">Buildings</b>
         <h7 globalize="registered_churches">Registered churches:</h7>
